--- a/mb_palpay/styles/style.css
+++ b/mb_palpay/styles/style.css
@@ -26,6 +26,11 @@ td{
     word-wrap:break-word
 }
 
+#miniStatement td, th { 
+  padding: 6px; 
+  border: 1px solid #ccc; 
+  text-align: center; 
+}
 
 @media 
 only screen and (max-width: 760px),
