Changes made by PCNC Solutions (pcncdeveloper@gmail.com). changed logo / icon / splash screen

--- a/mb_palpay/styles/style.css
+++ b/mb_palpay/styles/style.css
@@ -115,12 +115,12 @@ td,th{
 } */
 
 #logoContainer{
-     background-color:#664455;
+     background-image: url(../styles/images/palpay.png);
     background-repeat: no-repeat;
     text-align: center;
     width: 320px;
     height: 193px;
-    margin: 0px auto;
+    margin:  0px auto;
    
     }
 
