--- a/mb_palpay/styles/style.css
+++ b/mb_palpay/styles/style.css
@@ -1,10 +1,13 @@
 .accountInfo{
     background-color:gray;
     border-radius:25px;
-    margin-bottom:5px !important;
+    margin-bottom:5px  !important;
+    padding-top:0  !important;
+   
     
     
 }
+
 
 
 
