--- a/mb_palpay/views/accountsSubViews/bankAccountsView.html
+++ b/mb_palpay/views/accountsSubViews/bankAccountsView.html
@@ -8,7 +8,7 @@
                     <a data-icon="details" href="#balanceInquiry">Balance Inquiry</a>
                 </li>
                 <li>
-                    <a data-icon="organize" href="#miniStatement">Mini Statement</a>
+                    <a data-icon="organize" href="miniStatement">Mini Statement</a>
                 </li>
                 <li>
                     <a data-icon="mostviewed" href="#cs">Full Statement Request</a>
