--- a/mb_palpay/views/homeView.html
+++ b/mb_palpay/views/homeView.html
@@ -11,13 +11,13 @@
                     <a id="11" data-icon="bookmarks" href="views/accountsView.html" >Accounts</a>
                 </li>
                 <li>
-                    <a data-icon="fastforward" href="transfers">Transfers</a>
+                    <a data-icon="fastforward" href="views/transfersView.html">Transfers</a>
                 </li>
                 <li>
-                    <a data-icon="compose" href="#chequeServices">Cheque Services</a>
+                    <a data-icon="compose" href="views/chequeServicesView.html">Cheque Services</a>
                 </li>
                 <li>
-                    <a data-icon="cart" href="#billPayments">Bill Payments</a>
+                    <a data-icon="cart" href="views/billPaymentsView.html">Bill Payments</a>
                 </li>
                 <li>
                     <a data-icon="globe" href="#cs">Locate Bank of Palestine</a>
