Changes made by PCNC Solutions (pcncdeveloper@gmail.com). 1.1.4

--- a/mb_palpay/styles/style.css
+++ b/mb_palpay/styles/style.css
@@ -50,7 +50,7 @@ Generic Styling, for Desktops/Laptops
  tr:nth-of-type(odd) { 
   /*background: #2e5c69; */
   /*   background: #00b3db;*/
-     background: #00aeef;
+     background: white;
 }
  th { 
   /*background: #333; */
