Changes made by PCNC Solutions (pcncdeveloper@gmail.com). updated the views on Ipad/Iphone

--- a/mb_palpay/views/homeView.html
+++ b/mb_palpay/views/homeView.html
@@ -1,33 +1,35 @@
 <!-- Home View Start -->
-    <div data-role="view" id="homeView"  data-layout="main-layout">
-         
-                <h4>Welcome to BOP Mobile Banking</h4>
-                <h6>Mr. Iyad Qumsieh you're last login was today 9:43 am</h6>
-                  
-        
-        <ul data-role="listview" data-style="inset">
-               
-                <li>
-                    <a id="11" data-icon="bookmarks" href="views/accountsView.html" >Accounts</a>
-                </li>
-                <li>
-                    <a data-icon="fastforward" href="views/transfersView.html">Transfers</a>
-                </li>
-                <li>
-                    <a data-icon="compose" href="views/chequeServicesView.html">Cheque Services</a>
-                </li>
-                <li>
-                    <a data-icon="cart" href="views/billPaymentsView.html">Bill Payments</a>
-                </li>
-                <li>
-                    <a data-icon="globe" href="#cs">Locate Bank of Palestine</a>
-                </li>
-                <li>
-                    <a data-icon="info" href="#cs">Information</a>
-                </li><li>
-                    <a data-icon="more" href="#cs">Other services</a>
-                </li>
-                
-            </ul>
-    </div>
-   <!-- Home View End -->
+<div data-role="view" id="homeView"  data-layout="main-layout2">
+
+    
+
+    
+    <ul data-role="listview" data-style="inset">
+<li><h4>Welcome to BOP Mobile Banking</h4>
+    <h6>Mr. Iyad Qumsieh you're last login was today 9:43 am</h6></li>
+        <li>
+            <a  data-icon="bookmarks" href="views/accountsView.html">Accounts</a>
+        </li>
+        <li>
+            <a data-icon="fastforward" href="views/transfersView.html">Transfers</a>
+        </li>
+        <li>
+            <a data-icon="compose" href="views/chequeServicesView.html">Cheque Services</a>
+        </li>
+        <li>
+            <a data-icon="cart" href="views/billPaymentsView.html">Bill Payments</a>
+        </li>
+        <li>
+            <a data-icon="globe" href="#cs">Locate Bank of Palestine</a>
+        </li>
+        <li>
+            <a data-icon="info" href="#cs">Information</a>
+        </li>
+        <li>
+            <a data-icon="more" href="#cs">Other services</a>
+        </li>
+
+    </ul>
+</div>
+   
+<!-- Home View End -->
