Changes made by PCNC Solutions (pcncdeveloper@gmail.com). added test view to test MVVM

--- a/mb_palpay/views/homeView.html
+++ b/mb_palpay/views/homeView.html
@@ -23,7 +23,7 @@
             <a data-icon="globe" href="#cs">Locate Bank of Palestine</a>
         </li>
         <li>
-            <a data-icon="info" href="#cs">Information</a>
+            <a data-icon="info" href="#testView">Information</a>
         </li>
         <li>
             <a data-icon="more" href="#cs">Other services</a>
