Changes made by PCNC Solutions (pcncdeveloper@gmail.com).
working on the mvvm

--- a/mb_palpay/views/homeView.html
+++ b/mb_palpay/views/homeView.html
@@ -6,7 +6,7 @@
     
     <ul data-role="listview" data-style="inset">
 <li><h4>Welcome to BOP Mobile Banking</h4>
-    <h6>Mr. Iyad Qumsieh you're last login was today 9:43 am</h6></li>
+    <h6>Mr. Iyad Qumsieh your last login was today 9:43 am</h6></li>
         <li>
             <a  data-icon="bookmarks" href="views/accountsView.html">Accounts</a>
         </li>
